# mcp_for_semantic_segmentation

./: .gitignore  README.md  SETUP_GUIDE.md  SPECIFICATION.md  pyproject.toml  start_server.bat  start_server.ps1  start_server_manual.bat  test_mvp.py  test_natural_image.py  test_server_simple.py  test_server_startup.py
src/: __init__.py  __main__.py  segmentation.py  server.py  utils.py
unittest/: segmentation_test.py  utils_tests.py
